@@ -1,3 +1,8 @@
+git HEAD
+
+    * The internal representation of ignored hashes was changed
+    * "hashl update" no longer re-adds ignored (but existing) files
+
 hashl 0.1 - Fri May 06 2011
 
     * Initial release
